--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Kester Bascillo",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1"
