--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "Kester Bascillo",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mailgun.js": "^9.3.0"
+    "express-session": "^1.17.3",
+    "mailgun.js": "^9.3.0",
+    "mongoose": "^8.0.0"
   }
 }
