--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.2",
     "express-session": "^1.17.3",
     "mailgun.js": "^9.3.0",
     "mongoose": "^8.0.0"
